--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,91 @@
     font-family: Poppins;
     box-sizing: border-box;
 }
+
+body{
+    background: #222;
+}
+
+.card{
+    width: 90%;
+    color: #FFF;
+    max-width: 470px;
+    padding:40px 35px;
+    text-align: center;
+    border-radius: 20px;
+    margin: 100px auto 0;
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+}
+
+.search{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.search input{
+    flex: 1;
+    border: 0px;
+    height: 60px;
+    outline: 0px;
+    color: #555;
+    font-size: 18px;
+    margin-right: 16px;
+    padding: 10px 25px;
+    border-radius: 30px;
+    background: #ebfffc;
+}
+.search button{
+    border: 0px; 
+    width: 60px;
+    height: 60px;
+    outline: 0px;
+    cursor: pointer;
+    border-radius: 50%;
+    background: #ebfffc;
+}
+
+.search button img {
+    width: 16px;
+}
+
+.weather-icon{
+    width: 170px;
+    margin-top: 30px;
+}
+
+.weather h1{
+   font-size: 80px;
+   font-weight: 500;
+}
+.weather h2{
+   font-size: 45px;
+   font-weight: 400;
+   margin-top: -10px;
+}
+
+.details{
+    display: flex;
+    padding: 0 20px;
+    margin-top: 50px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.col{
+    display: flex;
+    text-align: left;
+    align-items: center;
+}
+
+.col img {
+    width: 40px;
+    margin-right: 10px;
+}
+
+.humidity,.wind{
+    font-size: 28px;
+    margin-top: -6px;
+}
